NATTQA-ENV/force-app/main/default/objects/NAC_Country_and_State_Picklist__mdt/NAC_Country_and_State_Picklist__mdt.object-meta.xml
<CustomObject>
    <label>NAC Country and State Picklist</label>
    <pluralLabel>NAC Country and State Picklists</pluralLabel>
</CustomObject>