NATTQA-ENV/force-app/main/default/objects/NAC_Country_and_State_Picklist__mdt/fields/nac_Active__c.field-meta.xml
<CustomField>
    <fullName>nac_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>