NATTQA-ENV/force-app/main/default/objects/NAC_Country_and_State_Picklist__mdt/fields/nac_Country__c.field-meta.xml
<CustomField>
    <fullName>nac_Country__c</fullName>
    <label>Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>