NATTQA-ENV/force-app/main/default/objects/NAC_Country_and_State_Picklist__mdt/fields/nac_State__c.field-meta.xml
<CustomField>
    <fullName>nac_State__c</fullName>
    <label>State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>