NATTQA-ENV/force-app/main/default/objects/NAC_Country_and_State_Picklist__mdt/fields/nac_State_Code__c.field-meta.xml
<CustomField>
    <fullName>nac_State_Code__c</fullName>
    <label>State Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>